
add_executable(hello_world hello_world.c)
add_executable(oriented_graph_unit_test data-structure/graph/oriented_graph_unit_test.c)
add_executable(undirected_graph_unit_testing data-structure/graph/undirected_graph_unit_testing.c)
add_executable(symbol demo-in-linux/elf/address.c)
add_executable(red-black_tree_unit_test data-structure/tree/red-black_tree_unit_test.c)
add_executable(demo01 demo-in-linux/elf/symbol.c demo-in-linux/program/hello_world.c demo-in-linux/dynamically-statically-linked/statically_library.c demo-in-linux/dynamically-statically-linked/statically_use.c)
add_executable(threaded_binary_tree_unit_test data-structure/tree/threaded_binary_tree_unit_test.c)